@@ -1,4 +1,3 @@
 - Allow multiple backup directory structures
 - Collection backups
-- Backup sets with more than 500 photos
 - Script to release a tar'ed version of the software
